Support for otc.yaml config file in classpath